syntax = "proto3";

import "media-messages.proto";

option java_package = "jp.woven.media.services";

option java_multiple_files = true;

service MediaService{

  rpc createStreamMedia(stream MediaChunk) returns (CreateMediaResponse);

  rpc getStreamMedia(GetMediaRequest) returns (stream MediaChunk);

  rpc listMedias(ListMediaRequest) returns (ListMediaResponse);

  rpc deleteMedia(DeleteMediaRequest) returns (DeleteMediaResponse);

}